2010-06-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Re-enable fold.comment for the C lexer - it was disabled to prevent
   //{ explicit folding, but that also disables stream comments /* */.
 * tagmanager/tm_workspace.c, tagmanager/get.c:
   Use g_free instead of free (patch by Daniel Marjamäki, thanks).


2010-06-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, doc/plugins.dox:
   Fix not loading plugins built against a newer API when Geany doesn't
   provide the required version given in PLUGIN_VERSION_CHECK().
   Improve documentation for PLUGIN_VERSION_CHECK().
 * plugins/filebrowser.c:
   Allow Find in Files when no items are selected.


2010-06-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/notebook.c:
   Align notebook tab close buttons centred vertically - thanks to
   Robux.Biz (galyuk).


2010-06-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * po/POTFILES.skip:
   Add doc/stash-example.c to fix 'make distcheck'.
 * geany.nsi:
   Change the RequestExecutionLevel for the Windows installer to
   'highest'.
 * New release: Geany 0.19 "Vellam".


2010-06-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Group undo action for Insert Multiline Comment.


2010-06-08  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * Makefile.am:
   Don't individually install data/*.tags as all data/* files will be
   installed anyway.


2010-06-07  Frank Lanitz  <frank@frank.uvena.de>

 * tagmanager/tm_project.c:
   Fix a double free. (patch by Daniel Marjamaki, thanks).


2010-06-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * tagmanager/tm_workspace.c:
   Fix two memory leaks (patch by Daniel Marjamaki, thanks).
 * src/sidebar.c:
   Fix reducing paths to project name in the Documents list
   (patch by Eugene Arshinov, thanks).
 * src/symbols.c: