@@ -3043,6 +3043,12 @@ older format configuration files.</p>
 <p>Since Geany 0.13 there has been printing support using GTK's printing API.
 The printed page(s) will look nearly the same as on your screen in Geany.
 Additionally, there are some options to modify the printed page(s).</p>
+<div class="note">
+<p class="first admonition-title">Note</p>
+<p class="last">The background text color is set to white, except for text with
+a white foreground. This allows dark color schemes to save ink
+when printing.</p>
+</div>
 <p>You can define whether to print line numbers, page numbers at the bottom of
 each page and whether to print a page header on each page. This header
 contains the filename of the printed document, the current page number and
@@ -6109,7 +6115,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-06-04 16:33 UTC.
+Generated on: 2010-08-11 14:25 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
